--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Login to dockerhub
       uses: docker/login-action@v3
       with:
-       username: ${{ variables.DOCKER_USERNAME }}
+       username: ${{ vars.DOCKER_USERNAME }}
        password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Build and push to dockerhub
