--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -11,6 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: update db url
+      run: sed -i 's/<db_url>/${{ secrets.DB_URL }}/' src/main/resources/apllication.properties
+
+    - name: update db user
+      run: sed -i 's/<db_user>/${{ secrets.DB_USER }}/' src/main/resources/apllication.properties
+
+    - name: update db pass
+      run: sed -i 's/<db_pass>/${{ secrets.DB_PASS }}/' src/main/resources/apllication.properties
+
+    - name: update google client id
+      run: sed -i 's/<google_id>/${{ secrets.GOOGLE_CLIENT_ID }}/' src/main/resources/apllication.properties
+
+    - name: update google secret
+      run: sed -i 's/<google_secret>/${{ secrets.GOOGLE_SECRET }}/' src/main/resources/apllication.properties
+    
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
