--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 spring.application.name=Octave
-spring.security.user.name=octaveadmin
-spring.security.user.password=8T]sF2>)-[*CZm]"
 spring.profiles.active=dev
 
 # Google OAuth Client Configuration
-spring.security.oauth2.client.registration.google.client-id=47220071512-qk0nbmvj5foplc14dgrdcvi8ojieoamj.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.client-id=<google_client_id>
+spring.security.oauth2.client.registration.google.client-secret=<google_secret>
 
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://34.121.64.145:5432/octave
-spring.datasource.username=postgres
-spring.datasource.password=8T]sF2>)-[*CZm]"
+spring.datasource.url=<db_url>
+spring.datasource.username=<db_user>
+spring.datasource.password=<db_pass>
