--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
+    
     - name: update db url
       run: sed -i 's/<db_url>/${{ secrets.DB_URL }}/' src/main/resources/apllication.properties
 
