--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=Octave
 spring.profiles.active=dev
 
 # Google OAuth Client Configuration
-spring.security.oauth2.client.registration.google.client-id=<google_client_id>
-spring.security.oauth2.client.registration.google.client-secret=<google_secret>
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_SECRET}
 
 # datasource connection properties
-spring.datasource.url=<db_url>
-spring.datasource.username=<db_user>
-spring.datasource.password=<db_pass>
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
