--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.github.skeffy</groupId>
-	<artifactId>octave</artifactId>
+	<artifactId>octave-auth</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>Octave Auth</name>
 	<description>Auth service for Octave</description>
