--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Octave
 spring.profiles.active=dev
+spring.port=3001
 
 # Google OAuth Client Configuration
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
