--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.application.name=Octave
-spring.profiles.active=dev
+spring.application.name=Octave Auth
 server.port=443
 
 # Google OAuth Client Configuration
@@ -16,3 +15,12 @@ jwt.header=Authorization
 jwt.base64-secret=${JWT_SECRET}
 jwt.token-validity=600000
 jwt.refresh-validity=86400000
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=${KEY_STORE}
+server.ssl.key-store-password=${KEY_STORE_PASS}
+server.ssl.key-alias=${KEY_ALIAS}
+server.ssl.enabled=true
+
+trust.store=${TRUST_STORE}
+trust.store.password=${TRUST_STORE_PASS}
